[package]
name = "combine_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_rapier2d = "0.22.0"

[target.'cfg(windows)'.build-dependencies]
bevy.version = "0.11.3"
bevy.features = ["dynamic_linking"]

[profile.release]
opt-level = 'z'
lto = "thin"

